--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.15",
     "@apollo/react-hooks": "^4.0.0",
+    "@types/apollo-upload-client": "^14.1.0",
     "apollo-boost": "^0.4.9",
     "apollo-link-context": "^1.0.20",
     "axios": "^0.21.1",
